remove reused assert package