@@ -3,8 +3,6 @@ package com.github.agiledon.sisyphus;
 import com.github.agiledon.sisyphus.domain.json.StandardVariable;
 import com.github.agiledon.sisyphus.domain.json.User;
 import com.google.common.base.Objects;
-import org.hamcrest.CoreMatchers;
-import org.hamcrest.MatcherAssert;
 import org.hamcrest.core.IsNot;
 import org.junit.Test;
 
@@ -12,36 +10,36 @@ import java.util.List;
 
 import static com.github.agiledon.sisyphus.Fixture.from;
 import static org.hamcrest.CoreMatchers.is;
-import static org.hamcrest.CoreMatchers.nullValue;
-import static org.hamcrest.MatcherAssert.assertThat;
+import static org.hamcrest.core.IsNull.nullValue;
+import static org.junit.Assert.assertThat;
 
 public class JsonFixtureTest {
     @Test
     public void should_compose_User_data_with_json_format() {
         User user = Fixture.from("user.json").to(User.class);
-        MatcherAssert.assertThat(user, IsNot.not(CoreMatchers.nullValue()));
-        MatcherAssert.assertThat(user.getName().getFirst(), CoreMatchers.is("Joe"));
+        assertThat(user, IsNot.not(nullValue()));
+        assertThat(user.getName().getFirst(), is("Joe"));
     }
 
     @Test
     public void should_compose_User_data_with_gson_format() {
         User user = Fixture.from("user.gson").to(User.class);
-        MatcherAssert.assertThat(user, IsNot.not(CoreMatchers.nullValue()));
+        assertThat(user, IsNot.not(nullValue()));
 
         //gson can't support the case which fieldname is not match get method
         //gson can't convert "Rm9vYmFyIQ==" to byte[]
-        MatcherAssert.assertThat(user.getName(), CoreMatchers.is(CoreMatchers.nullValue()));
+        assertThat(user.getName(), is(nullValue()));
     }
 
     @Test
     public void should_compose_User_data_from_cache_with_json_format() {
         User user = Fixture.from("user.json").to(User.class);
-        MatcherAssert.assertThat(user, IsNot.not(CoreMatchers.nullValue()));
+        assertThat(user, IsNot.not(nullValue()));
 
         User cachedUser = Fixture.from("user.json").to(User.class);
-        MatcherAssert.assertThat(cachedUser, IsNot.not(CoreMatchers.nullValue()));
+        assertThat(cachedUser, IsNot.not(nullValue()));
 
-        MatcherAssert.assertThat(Objects.equal(user, cachedUser), CoreMatchers.is(true));
+        assertThat(Objects.equal(user, cachedUser), is(true));
     }
 
     @Test
@@ -49,16 +47,16 @@ public class JsonFixtureTest {
         StandardVariable[] standardVariables = Fixture.from("standardVariable.json").to(StandardVariable[].class);
 
         //Jackson can't support the class without default constructor if not using annotation
-        MatcherAssert.assertThat(standardVariables, CoreMatchers.is(CoreMatchers.nullValue()));
+        assertThat(standardVariables, is(nullValue()));
     }
 
     @Test
     public void should_compose_StandardVariables_data_with_gson_format() {
         StandardVariable[] standardVariables = Fixture.from("standardVariable.gson").to(StandardVariable[].class);
-        MatcherAssert.assertThat(standardVariables, IsNot.not(CoreMatchers.nullValue()));
-        MatcherAssert.assertThat(standardVariables[0].result, CoreMatchers.is("0"));
-        MatcherAssert.assertThat(standardVariables[1].result, CoreMatchers.is("1"));
-        MatcherAssert.assertThat(standardVariables[2].result, CoreMatchers.is("2"));
+        assertThat(standardVariables, IsNot.not(nullValue()));
+        assertThat(standardVariables[0].result, is("0"));
+        assertThat(standardVariables[1].result, is("1"));
+        assertThat(standardVariables[2].result, is("2"));
     }
 
     @Test
@@ -66,21 +64,21 @@ public class JsonFixtureTest {
         StandardVariable[] standardVariables = Fixture.from("standardVariableWithTemplate.gson")
                 .withTemplate("template/standardVariable.template")
                 .to(StandardVariable[].class);
-        MatcherAssert.assertThat(standardVariables, IsNot.not(CoreMatchers.nullValue()));
-        MatcherAssert.assertThat(standardVariables[0].result, CoreMatchers.is("0"));
-        MatcherAssert.assertThat(standardVariables[1].result, CoreMatchers.is("1"));
-        MatcherAssert.assertThat(standardVariables[2].result, CoreMatchers.is("2"));
+        assertThat(standardVariables, IsNot.not(nullValue()));
+        assertThat(standardVariables[0].result, is("0"));
+        assertThat(standardVariables[1].result, is("1"));
+        assertThat(standardVariables[2].result, is("2"));
     }
 
     @Test
     public void should_compose_User_data_from_cache_with_gson_format() {
         StandardVariable[] standardVariables = Fixture.from("standardVariable.gson").to(StandardVariable[].class);
-        MatcherAssert.assertThat(standardVariables, IsNot.not(CoreMatchers.nullValue()));
+        assertThat(standardVariables, IsNot.not(nullValue()));
 
         StandardVariable[] cachedStandardVariables = Fixture.from("standardVariable.gson").to(StandardVariable[].class);
-        MatcherAssert.assertThat(cachedStandardVariables, IsNot.not(CoreMatchers.nullValue()));
+        assertThat(cachedStandardVariables, IsNot.not(nullValue()));
 
-        MatcherAssert.assertThat(Objects.equal(standardVariables, cachedStandardVariables), CoreMatchers.is(true));
+        assertThat(Objects.equal(standardVariables, cachedStandardVariables), is(true));
     }
 
     @Test
@@ -88,9 +86,9 @@ public class JsonFixtureTest {
         User user = Fixture.from("userWithTemplate.json")
                 .withTemplate("template/user.template")
                 .to(User.class);
-        MatcherAssert.assertThat(user, IsNot.not(CoreMatchers.nullValue()));
-        MatcherAssert.assertThat(user.getName().getFirst(), CoreMatchers.is("Joe"));
-        MatcherAssert.assertThat(user.getName().getLast(), CoreMatchers.is("Sixpack"));
+        assertThat(user, IsNot.not(nullValue()));
+        assertThat(user.getName().getFirst(), is("Joe"));
+        assertThat(user.getName().getLast(), is("Sixpack"));
     }
 
     @Test
@@ -98,11 +96,11 @@ public class JsonFixtureTest {
         List<User> users = Fixture.from("userWithMultiSections.json")
                 .withTemplate("template/user.template")
                 .toList(User.class);
-        MatcherAssert.assertThat(users, IsNot.not(CoreMatchers.nullValue()));
-        MatcherAssert.assertThat(users.get(0).getName().getFirst(), CoreMatchers.is("Joe"));
-        MatcherAssert.assertThat(users.get(0).getName().getLast(), CoreMatchers.is("Sixpack"));
-        MatcherAssert.assertThat(users.get(2).getName().getFirst(), CoreMatchers.is("Yi"));
-        MatcherAssert.assertThat(users.get(2).getName().getLast(), CoreMatchers.is("Zhang"));
+        assertThat(users, IsNot.not(nullValue()));
+        assertThat(users.get(0).getName().getFirst(), is("Joe"));
+        assertThat(users.get(0).getName().getLast(), is("Sixpack"));
+        assertThat(users.get(2).getName().getFirst(), is("Yi"));
+        assertThat(users.get(2).getName().getLast(), is("Zhang"));
     }
 
 
